[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/screens/ResultScreen.gd" type="Script" id=1]
[ext_resource path="res://label_theme_bigger.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/ships/ship_orange.png" type="Texture" id=3]
[ext_resource path="res://label_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/screens/MenuButton.tscn" type="PackedScene" id=5]

[node name="ResultScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="VSplitContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1200.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VSplitContainer"]
margin_right = 1200.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="PlacementContainer2" type="MarginContainer" parent="MarginContainer/VSplitContainer/HBoxContainer"]
margin_right = 598.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2"]
margin_right = 598.0
margin_bottom = 418.0

[node name="NameLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer"]
margin_right = 598.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Name:"
align = 1
clip_text = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer"]
margin_top = 124.0
margin_right = 598.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4
split_offset = -67
dragger_visibility = 2

[node name="AvatarRect" type="TextureRect" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer/HSplitContainer"]
margin_right = 446.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer/HSplitContainer"]
margin_left = 446.0
margin_right = 598.0
margin_bottom = 168.0
size_flags_vertical = 3
dragger_visibility = 2

[node name="WinsLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer/HSplitContainer/VSplitContainer"]
margin_right = 85.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Wins:"
align = 1
valign = 1

[node name="OrbsLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer/HSplitContainer/VSplitContainer"]
margin_top = 54.0
margin_right = 84.0
margin_bottom = 108.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Orbs:"
align = 1
valign = 1

[node name="PlaceLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer2/VBoxContainer"]
margin_top = 296.0
margin_right = 598.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "2nd Place"
align = 1

[node name="PlacementContainer1" type="MarginContainer" parent="MarginContainer/VSplitContainer/HBoxContainer"]
margin_left = 602.0
margin_right = 1200.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1"]
margin_right = 598.0
margin_bottom = 418.0

[node name="NameLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer"]
margin_right = 598.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Name:"
align = 1
clip_text = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer"]
margin_top = 124.0
margin_right = 598.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4
split_offset = -67
dragger_visibility = 2

[node name="AvatarRect" type="TextureRect" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer/HSplitContainer"]
margin_right = 446.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer/HSplitContainer"]
margin_left = 446.0
margin_right = 598.0
margin_bottom = 168.0
size_flags_vertical = 3
dragger_visibility = 2

[node name="WinsLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer/HSplitContainer/VSplitContainer"]
margin_right = 85.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Wins:"
align = 1
valign = 1

[node name="OrbsLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer/HSplitContainer/VSplitContainer"]
margin_top = 54.0
margin_right = 84.0
margin_bottom = 108.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Orbs:"
align = 1
valign = 1

[node name="PlaceLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer1/VBoxContainer"]
margin_top = 296.0
margin_right = 598.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "1st Place"
align = 1

[node name="PlacementContainer3" type="MarginContainer" parent="MarginContainer/VSplitContainer/HBoxContainer"]
visible = false
margin_left = 802.0
margin_right = 1200.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3"]
margin_right = 398.0
margin_bottom = 418.0

[node name="NameLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer"]
margin_right = 398.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Name:"
align = 1
clip_text = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer"]
margin_top = 124.0
margin_right = 398.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4
split_offset = -67
dragger_visibility = 2

[node name="AvatarRect" type="TextureRect" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer/HSplitContainer"]
margin_right = 246.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer/HSplitContainer"]
margin_left = 246.0
margin_right = 398.0
margin_bottom = 168.0
size_flags_vertical = 3
dragger_visibility = 2

[node name="WinsLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer/HSplitContainer/VSplitContainer"]
margin_right = 85.0
margin_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Wins:"
align = 1
valign = 1

[node name="OrbsLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer/HSplitContainer/VSplitContainer"]
margin_top = 54.0
margin_right = 84.0
margin_bottom = 108.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Orbs:"
align = 1
valign = 1

[node name="PlaceLabel" type="Label" parent="MarginContainer/VSplitContainer/HBoxContainer/PlacementContainer3/VBoxContainer"]
margin_top = 296.0
margin_right = 398.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "3rd Place"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VSplitContainer"]
margin_top = 422.0
margin_right = 1200.0
margin_bottom = 427.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VSplitContainer"]
margin_top = 431.0
margin_right = 1200.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HSplitContainer" parent="MarginContainer/VSplitContainer/MarginContainer"]
margin_right = 1200.0
margin_bottom = 209.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1

[node name="LobbyButton" parent="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer" instance=ExtResource( 5 )]
editor/display_folded = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 594.0
margin_bottom = 209.0

[node name="Label" parent="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer/LobbyButton" index="0"]
text = "Back to Lobby"
align = 1

[node name="MenuButton" parent="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 606.0
margin_right = 1200.0
margin_bottom = 209.0

[node name="Label" parent="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer/MenuButton" index="0"]
text = "Back to Menu"
align = 1

[connection signal="pressed" from="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer/LobbyButton" to="." method="_on_LobbyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]

[editable path="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer/LobbyButton"]

[editable path="MarginContainer/VSplitContainer/MarginContainer/HBoxContainer/MenuButton"]
